<resources>
    <string name="Remaind_password">Забыли пароль?</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="about">About</string>
    <string name="about_liblinphone_version">Linphone Core %s</string>
    <string name="about_link">www.linphone.org</string>
    <string name="about_text">GNU General Public License V2\10 © 2010-2017 Belledonne Communications</string>
    <string name="about_version">Linphone Android %s</string>
    <string name="app_description">the libre SIP client</string>
    <string name="app_name">react-native-picker</string>
    <string name="assistant">Assistant</string>
    <string name="content_description_back">Back</string>
    <string name="content_description_dialer_back">Return to dialer</string>
    <string name="menu_reset_log">Reset log</string>
    <string name="menu_send_log">Send log</string>
    <string name="nav_first">Умный дом</string>
    <string name="nav_fith">Чат</string>
    <string name="nav_fourth">Маркет</string>
    <string name="nav_second">Охрана</string>
    <string name="nav_third">Услуги</string>
    <string name="navigationMyFlat">Моя квартира</string>
    <string name="pref_adaptive_rate_control">Adaptive rate control</string>
    <string name="pref_adaptive_rate_control_key">pref_adaptive_rate_control_key</string>
    <string name="pref_add_account">Add account</string>
    <string name="pref_add_account_key">pref_add_account_key</string>
    <string name="pref_advanced_key">pref_advanced_key</string>
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_android_app_settings_key">pref_android_app_settings_key</string>
    <string name="pref_android_app_settings_title">Android app settings</string>
    <string name="pref_audio_hacks_title">Audio hacks</string>
    <string name="pref_audio_hacks_use_galaxys_hack_key">pref_audio_hacks_use_galaxys_hack_key</string>
    <string name="pref_audio_hacks_use_galaxys_hack_title">Use Galaxy S audio hack</string>
    <string name="pref_audio_hacks_use_routing_api_key">pref_audio_hacks_use_routing_api_key</string>
    <string name="pref_audio_hacks_use_routing_api_title">Use routing API hack</string>
    <string name="pref_audio_key">pref_audio_key</string>
    <string name="pref_audio_port_description">Audio port or port range (minport-maxport)</string>
    <string name="pref_audio_port_key">pref_audio_port_key</string>
    <string name="pref_audio_port_title">Audio port or port range</string>
    <string name="pref_audio_title">Audio</string>
    <string name="pref_audio_use_specific_mode_key">pref_audio_use_specific_mode_key</string>
    <string name="pref_audio_use_specific_mode_summary">0=MODE_NORMAL (default), 2=MODE_IN_CALL</string>
    <string name="pref_audio_use_specific_mode_title">Use specific mode hack</string>
    <string name="pref_auto_answer">Auto answer incoming calls</string>
    <string name="pref_auto_answer_key">pref_auto_answer_key</string>
    <string name="pref_auto_answer_time">Auto answer time(in milliseconds)</string>
    <string name="pref_auto_answer_time_key">pref_auto_answer_time_key</string>
    <string name="pref_autostart">Start at boot time</string>
    <string name="pref_autostart_key">pref_autostart_key</string>
    <string name="pref_background_mode">Background mode</string>
    <string name="pref_background_mode_key">pref_background_mode_key</string>
    <string name="pref_bandwidth_limit">Bandwidth limit in kbits/s</string>
    <string name="pref_bandwidth_limit_key">pref_bandwidth_limit_key</string>
    <string name="pref_call_key">pref_call_key</string>
    <string name="pref_call_title">Call</string>
    <string name="pref_chat_key">pref_chat_key</string>
    <string name="pref_chat_title">Chat</string>
    <string name="pref_codec_bitrate_limit">Codec bitrate limit</string>
    <string name="pref_codec_bitrate_limit_key">pref_codec_bitrate_limit_key</string>
    <string name="pref_codecs">Codecs</string>
    <string name="pref_codecs_key">pref_codecs_key</string>
    <string name="pref_debug">Debug</string>
    <string name="pref_debug_key">pref_debug_key</string>
    <string name="pref_debug_title">Debug</string>
    <string name="pref_device_ringtone">Use device ringtone</string>
    <string name="pref_device_ringtone_key">pref_device_ringtone_key</string>
    <string name="pref_dialer_call">Use Linphone as default phone app</string>
    <string name="pref_dialer_call_key">pref_dialer_call_key</string>
    <string name="pref_display_name_key">pref_display_name_key</string>
    <string name="pref_display_name_title">Display name</string>
    <string name="pref_echo_cancellation">Echo cancellation</string>
    <string name="pref_echo_cancellation_key">pref_echo_cancellation_key</string>
    <string name="pref_echo_cancellation_summary">Removes the echo heard by other end</string>
    <string name="pref_echo_canceller_calibration">Echo canceler calibration</string>
    <string name="pref_echo_canceller_calibration_key">pref_echo_canceller_calibration_key</string>
    <string name="pref_echo_tester">Test echo</string>
    <string name="pref_echo_tester_key">pref_echo_tester_key</string>
    <string name="pref_friendlist_subscribe">Friendlist subscribe</string>
    <string name="pref_friendlist_subscribe_key">pref_friendlist_subscribe_key</string>
    <string name="pref_ice_enable">Enable ICE</string>
    <string name="pref_ice_enable_key">pref_ice_enable_key</string>
    <string name="pref_image_sharing_server_desc">Do not edit unless you know what you are doing!</string>
    <string name="pref_image_sharing_server_key">pref_image_sharing_server_key</string>
    <string name="pref_image_sharing_server_title">Sharing server</string>
    <string name="pref_incoming_call_timeout_key">pref_incoming_expire_key</string>
    <string name="pref_incoming_call_timeout_title">Incoming call hangup (in seconds)</string>
    <string name="pref_ipv6_key">pref_ipv6_key</string>
    <string name="pref_ipv6_title">Allow IPv6</string>
    <string name="pref_media_encryption">Media encryption</string>
    <string name="pref_media_encryption_key">pref_media_encryption_key</string>
    <string name="pref_network_key">pref_network_key</string>
    <string name="pref_network_title">Network</string>
    <string name="pref_overlay">Video overlay</string>
    <string name="pref_overlay_key">pref_overlay_key</string>
    <string name="pref_overlay_summary">Display call video in overlay when outside the application</string>
    <string name="pref_preferences_title">Preferences</string>
    <string name="pref_preferred_fps">Preferred FPS</string>
    <string name="pref_preferred_video_fps_key">pref_preferred_video_fps_key</string>
    <string name="pref_preferred_video_size">Preferred video size</string>
    <string name="pref_preferred_video_size_key">pref_preferred_video_size_key</string>
    <string name="pref_primary_account_title">Primary account</string>
    <string name="pref_push_notification">Enable push notifications</string>
    <string name="pref_push_notification_key">pref_push_notification_key</string>
    <string name="pref_remote_provisioning_key">pref_remote_provisioning_key</string>
    <string name="pref_remote_provisioning_title">Remote provisioning</string>
    <string name="pref_rfc2833_dtmf">Send in-band DTMFs(RFC2833)</string>
    <string name="pref_rfc2833_dtmf_key">pref_rfc2833_dtmf_key</string>
    <string name="pref_service_notification">Enable service notification</string>
    <string name="pref_service_notification_key">pref_service_notification_key</string>
    <string name="pref_sip_port_key">pref_sip_port_key</string>
    <string name="pref_sip_port_title">SIP port to use</string>
    <string name="pref_sipaccounts">SIP Accounts</string>
    <string name="pref_sipaccounts_key">pref_sipaccounts_key</string>
    <string name="pref_sipinfo_dtmf">Send out-band DTMFs(SIP INFO)</string>
    <string name="pref_sipinfo_dtmf_key">pref_sipinfo_dtmf_key</string>
    <string name="pref_stun_server">STUN / TURN server</string>
    <string name="pref_stun_server_key">pref_stun_server_key</string>
    <string name="pref_transport_use_random_ports">Use random ports</string>
    <string name="pref_transport_use_random_ports_key">pref_transport_use_random_ports_key</string>
    <string name="pref_tunnel">Tunnel</string>
    <string name="pref_tunnel_host">Hostname</string>
    <string name="pref_tunnel_host_key">pref_tunnel_host_key</string>
    <string name="pref_tunnel_key">pref_tunnel_key</string>
    <string name="pref_tunnel_mode">Mode</string>
    <string name="pref_tunnel_mode_key">pref_tunnel_mode_key</string>
    <string name="pref_tunnel_port">Port</string>
    <string name="pref_tunnel_port_key">pref_tunnel_port_key</string>
    <string name="pref_turn_enable">Enable TURN</string>
    <string name="pref_turn_enable_key">pref_turn_enable_key</string>
    <string name="pref_turn_passwd_key">pref_turn_passwd_key</string>
    <string name="pref_turn_passwd_title">STUN / TURN password (optional)</string>
    <string name="pref_turn_username_key">pref_turn_username_key</string>
    <string name="pref_turn_username_title">STUN / TURN username (optional)</string>
    <string name="pref_upnp_enable">Enable UPNP</string>
    <string name="pref_upnp_enable_key">pref_upnp_enable_key</string>
    <string name="pref_use_lime_encryption">Use LIME encryption</string>
    <string name="pref_use_lime_encryption_key">pref_use_lime_encryption_key</string>
    <string name="pref_user_name_key">pref_user_name_key</string>
    <string name="pref_user_name_title">Username</string>
    <string name="pref_video_automatically_accept_video">Always accept video requests</string>
    <string name="pref_video_automatically_accept_video_key">pref_video_automatically_accept_video_key</string>
    <string name="pref_video_automatically_accept_video_title">Accept incoming video requests</string>
    <string name="pref_video_codecs_key">pref_video_codecs_key</string>
    <string name="pref_video_codecs_title">Codecs</string>
    <string name="pref_video_enable_key">pref_video_enable_key</string>
    <string name="pref_video_enable_title">Enable Video</string>
    <string name="pref_video_initiate_call_with_video">Always send video requests</string>
    <string name="pref_video_initiate_call_with_video_key">pref_video_initiate_call_with_video_key</string>
    <string name="pref_video_initiate_call_with_video_title">Initiate video calls</string>
    <string name="pref_video_key">pref_video_key</string>
    <string name="pref_video_port_description">Video port or port range (minport-maxport)</string>
    <string name="pref_video_port_key">pref_video_port_key</string>
    <string name="pref_video_port_title">Video port or port range</string>
    <string name="pref_video_preset">Video preset</string>
    <string name="pref_video_preset_key">pref_video_preset_key</string>
    <string name="pref_video_title">Video</string>
    <string name="pref_video_use_front_camera_key">pref_video_use_front_camera_key</string>
    <string name="pref_video_use_front_camera_title">Use front camera</string>
    <string name="pref_voice_mail">Voice mail URI</string>
    <string name="pref_voice_mail_key">pref_voice_mail_key</string>
    <string name="pref_wifi_only">Use WiFi only</string>
    <string name="pref_wifi_only_key">pref_wifi_only_key</string>
    <string name="title_build">Стройка</string>
    <string name="title_chats">Чаты</string>
    <string name="title_chats3">Чат</string>
    <string name="title_developer">Застройщик</string>
    <string name="title_love">Избранное</string>
    <string name="title_market">Маркет</string>
    <string name="title_news">Новости</string>
    <string name="title_search">Поиск</string>
    <string name="title_security">Охрана</string>
    <string name="title_service">Услуги</string>
    <string name="title_smartflat">Умный дом</string>
</resources>